--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -117,7 +117,7 @@
           "<time>" +
           data.time +
           "</time>" +
-          "</div>"
+          "</div><br /><br /><br /><br /><br /><br />"
       );
     } else {
       $("#chat-log").append(
